# patina

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/: 20250526174702_initial.sql
src/: main.rs  render.rs
src/api/: display.rs  helpers.rs  mod.rs
src/db/: mod.rs
src/models/: device.rs  state.rs
src/render/: image.rs  mod.rs  template.rs
templates/: base.liquid
