[package]
name = "byos-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
headless_chrome = "1.0.17"
image = "0.25.6"
liquid = "0.26.11"
log = "0.4.27"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "migrate", "chrono"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
